objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>AE_SFAE_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE SFAE Account</label>
        <referenceTo>AE_SFAE_Account__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APOAccountId__c</fullName>
        <label>APOAccountId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOAccountName__c</fullName>
        <label>APOAccountName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOAccountOwnerManager__c</fullName>
        <label>APOAccountOwnerManager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOAccountOwner__c</fullName>
        <label>APOAccountOwner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOContractId__c</fullName>
        <label>APOContractId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOSubscriptionId__c</fullName>
        <label>APOSubscriptionId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APOcontractURL__c</fullName>
        <formula>$Label.CopadoDomain &amp; &quot;/lightning/r/Contract/&quot; &amp;  APOContractId__c  &amp; &quot;/view&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APOcontractURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountIDstring__c</fullName>
        <formula>Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountIDstring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractEndString__c</fullName>
        <formula>TEXT(Month(  Contract_End__c  )) &amp; &quot;/&quot; &amp; TEXT(DAY( Contract_End__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( Contract_End__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractEndString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStartString__c</fullName>
        <formula>TEXT(Month( Contract_Start__c )) &amp; &quot;/&quot; &amp; TEXT(DAY( Contract_Start__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( Contract_Start__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractStartString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End__c</fullName>
        <label>Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <label>Contract Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndString__c</fullName>
        <formula>TEXT(Month(End__c)) &amp; &quot;/&quot; &amp; TEXT(DAY( End__c )) &amp; &quot;/&quot; &amp; RIGHT(TEXT(YEAR( End__c )), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GroupIDstring__c</fullName>
        <formula>SKU__r.Group__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupIDstring</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <formula>SKU__r.Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GroupName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MonthlyString__c</fullName>
        <formula>IF( Monthly__c  &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Monthly__c) &gt;= 1000000, TEXT(FLOOR(ABS(Monthly__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Monthly__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Monthly__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Monthly__c))), 3) &amp;

IF(Monthly__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MonthlyString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly__c</fullName>
        <label>Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProcessedAccountJoin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessedAccountJoin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessedCreate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedWhiteSpace__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProcessedWhiteSpace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PurchaseString__c</fullName>
        <formula>IF(  Purchase_Price__c   &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Purchase_Price__c) &gt;= 1000000, TEXT(FLOOR(ABS(Purchase_Price__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Purchase_Price__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Purchase_Price__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Purchase_Price__c))), 3) &amp;

IF(Purchase_Price__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PurchaseString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QuantityString__c</fullName>
        <formula>IF( Quantity__c  &lt; 0, &quot;(&quot;, &quot;&quot;)  &amp;
IF(ABS(Quantity__c) &gt;= 1000000, TEXT(FLOOR(ABS(Quantity__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Quantity__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Quantity__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Quantity__c))), 3) &amp;

IF(Quantity__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuantityString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>SKU__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartString__c</fullName>
        <formula>TEXT(Month(Start__c))  &amp; &quot;/&quot; &amp;  TEXT(DAY( Start__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR( Start__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StartString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalString__c</fullName>
        <formula>IF(Total__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Total__c) &gt;= 1000000, TEXT(FLOOR(ABS(Total__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Total__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Total__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Total__c))), 3) &amp; 

IF(Total__c &lt; 0, &quot;)&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalString</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>processAESFmap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>processAESFmap</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Quantity__c</columns>
        <columns>Monthly__c</columns>
        <columns>Total__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <columns>Contract_Start__c</columns>
        <columns>Contract_End__c</columns>
        <columns>SKU__c</columns>
        <columns>Group__c</columns>
        <columns>Contract_Term__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_no_Account_Join</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Quantity__c</columns>
        <columns>QuantityString__c</columns>
        <columns>Monthly__c</columns>
        <columns>MonthlyString__c</columns>
        <columns>Total__c</columns>
        <columns>TotalString__c</columns>
        <columns>End__c</columns>
        <columns>EndString__c</columns>
        <columns>Start__c</columns>
        <columns>StartString__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>APOContractId__c</columns>
        <columns>APOSubscriptionId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
        </filters>
        <label>All - no Account Join</label>
    </listViews>
    <listViews>
        <fullName>All_processed</fullName>
        <columns>NAME</columns>
        <columns>APOAccountId__c</columns>
        <columns>Account__c</columns>
        <columns>AccountIDstring__c</columns>
        <columns>Group__c</columns>
        <columns>Total__c</columns>
        <columns>GroupIDstring__c</columns>
        <columns>Processed__c</columns>
        <columns>ProcessedCreate__c</columns>
        <columns>ProcessedAccountJoin__c</columns>
        <columns>SKU__c</columns>
        <columns>APOAccountName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - processed</label>
    </listViews>
    <nameField>
        <label>Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>